# kpawnd.github.io

./: .gitignore  CNAME  Cargo.toml  Gemfile  _config.yml  build.rs  index.html  main.js  serve.py
.cargo/: config.toml
.github/workflows/: ci.yml  jekyll-deploy.yml
_posts/: 2025-08-01-1.md  2025-08-01-2.md  2025-08-01-honesty.md  2025-08-01-how-to-actually-study.md  2025-08-01-studying.md  2025-08-13-self-respect-the-foundation-of-who-you-are.md  2025-08-13-self-respect.md  2025-09-05-birthdays.md  2025-09-05-loneliness.md  2025-09-12-birthdays.md  2025-09-13-relationships.md  2025-09-24-unreasonable.md
_site/: 404.html  feed.xml  index.html  sitemap.xml
_site/about/: index.html
_site/archives/: index.html
_site/assets/css/: jekyll-theme-chirpy.css.map
_site/assets/img/favicons/: site.webmanifest
_site/assets/js/data/: search.json  swconf.js
_site/categories/: index.html
_site/categories/diary/: index.html
_site/posts/1/: index.html
_site/posts/how-to-actually-study/: index.html
_site/posts/self-respect-the-foundation-of-who-you-are/: index.html
_site/tags/: index.html
_site/tags/habits/: index.html
_site/tags/learning/: index.html
_site/tags/reflection/: index.html
_site/tags/studying/: index.html
_tabs/: about.md
cpp/: base64.cpp  checksum.cpp  collision.cpp  cpp_accel_common.h  crc32.cpp  fade.cpp  python_core.cpp  raycast.cpp
css/: bios.css  grace.css  grub.css  system7.css
js/: bios.js  boot.js  dom.js  grace.js  grub.js  multiplayer.js  nano.js  neofetch.js  network.js  panic.js  persist.js  state.js  storage.js  terminal.js
src/: boot.rs  cpp_accel.rs  desktop.rs  doom.rs  graphics.rs  graphics_gl.rs  grub.rs  idle.rs  kernel.rs  lib.rs  memory.rs  nano.rs  neofetch.rs  network.rs  persist.rs  physics.rs  process.rs  python.rs  screensaver.rs  services.rs  shell.rs  system.rs  vfs.rs  vfs_persist.rs
src/system/: linux.rs
