[package]
name = "terminal_os"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = []
webgl = []

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    "WebSocket",
    "MessageEvent",
    "ErrorEvent",
    "CloseEvent",
    "BinaryType",
    "RtcPeerConnection",
    "RtcDataChannel",
    "RtcSessionDescriptionInit",
    "RtcSdpType",
    "RtcPeerConnectionIceEvent",
    "RtcSessionDescription",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Headers",
    "Window",
    "Document",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "ImageData",
    "KeyboardEvent",
    "WebGl2RenderingContext",
    "WebGlRenderingContext",
    "WebGlProgram",
    "WebGlShader",
    "WebGlTexture",
    "WebGlUniformLocation",
    "WebGlBuffer",
    "AudioContext",
    "BaseAudioContext",
    "AudioNode",
    "AudioDestinationNode",
    "OscillatorNode",
    "OscillatorType",
    "GainNode",
    "AudioParam",
] }

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce parallel code generation units to optimize better
